# github-webhooker

./: .env.example  .gitignore  README.md  commands.json.example  lint.sh  pyproject.toml  run.sh
app/: main.py
app/config/: config.py
app/middlewares/: log.py
app/models/: webhook.py
app/routers/: webhook.py
app/service/notification/: __init__.py
app/service/notification/telegram/: __init__.py  api.py  config.py  models.py
app/utils/: webhook.py
tests/: test_config.py  test_webhook.py
