[project]
name = "github-webhooker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
]
